# nilos_engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  debug_output.txt  run.ps1
assets/shaders/: basic.frag  basic.vert  phong.frag  phong.vert
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  COLLISION_SYSTEM.md  CONTRIBUTING.md  DESARROLLO.md  ECS_GUIDE.md  GETTING_STARTED.md  PHASE3_DEMO.md  README.md  SETUP_GLAD.md
include/: NilosEngine.h
scripts/: build.bat  build.sh  setup_glad.py
src/: main.cpp
src/AI/: AISystem.h  Pathfinding.cpp  Pathfinding.h
src/Core/: Engine.cpp  Engine.h  Logger.h  Time.h
src/ECS/: Component.h  Entity.h  System.h  World.h
src/Events/: Event.h  EventManager.h
src/Input/: Input.cpp  Input.h
src/Physics/: Collision.h  PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h
src/Rendering/: Camera.h  DebugRenderer.cpp  DebugRenderer.h  Light.h  Material.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/Window/: Window.cpp  Window.h
